add stonecutter to project for multiversion, and implement a couple versions